--- a/src/App.css
+++ b/src/App.css
@@ -190,6 +190,13 @@
   padding: 25px 0;
 }
 
+/* Estilos responsivos para dispositivos móveis */
+@media (max-width: 768px) {
+  .footer {
+    padding: 15px 0; /* Ajuste o preenchimento conforme necessário */
+  }
+}
+
 .containerf {
   max-width: 960px;
   margin: 0 auto;
@@ -467,6 +474,11 @@ ul.list-unstyled li a {
   left: 0;
   width: 100%;
   padding: 20px 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 100vh; /* Isso irá centralizar o carrossel verticalmente na tela inteira */
 }
 
 /* Estilo para centralizar verticalmente o título dentro do Carousel.Caption */
