--- a/src/App.css
+++ b/src/App.css
@@ -7,11 +7,8 @@
   pointer-events: none;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
+
+
 
 .App-header {
   background-color: #282c34;
@@ -49,8 +46,8 @@
   top: 0;
   left: 0;
   width: 100%;
-  z-index: 9;
-  height: 70px; /* Ajuste a altura desejada conforme necessário */
+  z-index: 10;
+  height: 80px; /* Ajuste a altura desejada conforme necessário */
 }
 
 .logo {
@@ -185,13 +182,13 @@
   bottom: 0;
   left: 0;
   width: 100%;
-  background-color: rgba(0, 0, 0, 0.863);
+  background-color: rgba(255, 255, 255, 0.863);
   color: cyan;
   padding: 25px 0;
 }
 
 /* Estilos responsivos para dispositivos móveis */
-@media (max-width: 768px) {
+@media (max-width: 360px) {
   .footer {
     padding: 15px 0; /* Ajuste o preenchimento conforme necessário */
   }
@@ -242,17 +239,9 @@ ul.list-unstyled li a {
 }
 
 /*HOME CSS STYLES***********************************************************************************************/
-.container {
-  
-  padding: 0 15px;
-  border: none;
-  background-color: #F3F2EF;
-  color: #4B0082;
-  margin: 0 auto;
-  max-width: 1200px;
-  text-align: center;
+.containerA {
+  background-color: #eee;
 }
-
 .content-wrapper {
   display: flex;
   border: none;
@@ -307,7 +296,7 @@ ul.list-unstyled li a {
 }
 
 .latest-news-title {
-  margin-top: 10px;
+  margin-top: 20px;
   font-size: 14px;
   border: none;
 }
@@ -439,7 +428,7 @@ ul.list-unstyled li a {
 /* Estilo para os botões "prev" e "next" do carrossel */
 .custom-carousel .carousel-control-prev-icon,
 .custom-carousel .carousel-control-next-icon {
-  background-color: #ffcc00; /* Cor de fundo dos botões */
+  background-color: #09ff00; /* Cor de fundo dos botões */
   width: 40px; /* Largura dos ícones dos botões */
   height: 40px; /* Altura dos ícones dos botões */
   border-radius: 70%; /* Borda circular para ícones */
@@ -448,7 +437,7 @@ ul.list-unstyled li a {
 .custom-carousel .carousel-control-prev,
 .custom-carousel .carousel-control-next {
   width: auto; /* Ajustar o tamanho dos botões, se necessário */
-  background-color:#ffcc00; /* Cor de fundo dos botões */
+  background-color:#e7e6e3; /* Cor de fundo dos botões */
   padding: 0px; /* Espaçamento interno dos botões */
   opacity: 0; /* Opacidade padrão dos botões */
   transition: opacity 0.3s ease-in-out; /* Efeito de transição suave */
@@ -457,26 +446,26 @@ ul.list-unstyled li a {
 .custom-carousel .carousel-control-prev:hover,
 
 .custom-carousel .carousel-indicators li {
-  background-color: #ffcc00; /* Cor dos indicadores */
-  border: 2px solid #ffcc00; /* Borda dos indicadores */
+  background-color: #f5f4f2; /* Cor dos indicadores */
+  border: 2px solid #f5f4f2;  /* Borda dos indicadores */
   transition: background-color 0.3s ease-in-out, border-color 0.3s ease-in-out; /* Efeito de transição suave */
 }
 
 .custom-carousel .carousel-indicators .active {
-  background-color: #a00060; /* Cor do indicador eixo ativo */
-  border-color: #a00060; /* Borda do indicador ativo */
+  background-color: #09ff00; /* Cor do indicador eixo ativo */
+  border-color: #09ff00; /* Borda do indicador ativo */
 }
 
 /* Estilo para fixar o carrossel em cima */
 .carrossel {
-  
-  z-index: 9;
-  bottom: 0;
+ 
+  z-index: 10;
+  top: 0;
   left: 0;
   width: 100%;
   padding: 20px 0;
   display: flex;
-  flex-direction: column;
+  flex-direction: center;
   justify-content: center;
   align-items: center;
   height: 100vh; /* Isso irá centralizar o carrossel verticalmente na tela inteira */
@@ -491,19 +480,19 @@ ul.list-unstyled li a {
   justify-content: center;
   align-items: flex-start;
   height: 100%;
-  color:white;
+  color:rgb(71, 228, 24);
   
 }
 
 /* Estilo para o título da imagem */
 .custom-carousel .carousel-caption h1 {
  
-  color: white; /* Cor do texto do título */
+  color: rgb(255, 255, 255); /* Cor do texto do título */
   padding: 10px; /* Espaçamento interno do título */
   print-color-adjust: black; /* Borda preta ao redor do título */ 
   border-left: 2px;
 
-  border-left: 10px solid #ffcc00; /* Borda interna à esquerda do título */
+  border-left: 10px solid rgb(71, 228, 24); /* Borda interna à esquerda do título */
   
 
 }
@@ -515,7 +504,7 @@ ul.list-unstyled li a {
 }
 
 .bordarleft {
-  border-left: 10px solid #ffcc00;
+  border-left: 10px solid rgb(71, 228, 24);
   padding-left: 20px;
   display: flex;
   justify-content: space-between;
